# MyCloud

./: .gitignore  CMakeLists.txt  README.md
backendServer/: Makefile  StorageServer.cc  handleFile.cc  serverInfo.cc  serverInfo.h  test1.txt  testhandlefile  testhandlefile.cc
backendServer/masterServer/: .#master.cc  Makefile  header.h  master.cc  masterInfo.cc  masterInfo.h  testmaster  testmaster.cc
backendServer/masterServer/masterKVGrpc/: Makefile  ipno.txt  make.sh  masterBackend.pb.cc  masterBackend.pb.h  masterInfo.cc  masterKVClientGrpc.cc  masterKVGrpc.cc
backendServer/masterServer/masterServerGrpc/: DistributedStorage.h  Makefile  make.sh  masterClientGrpc.cc  masterFrontend.grpc.pb.cc  masterFrontend.grpc.pb.h  masterFrontend.pb.h  masterGrpc.cc  masterInfo.cc  masterWorker.h
backendServer/masterServer/masterServerGrpc/protos/: masterFrontend.pb.cc  masterFrontend.pb.h  masterFrontend.proto
backendServer/masterServer/protos/: backendMaster.pb.cc  backendMaster.pb.h  backendMaster.proto  masterFrontend.pb.cc
frontendServer/: CMakeLists.txt  MailClient.cc  MailClient.h  Makefile  SocketHelper.h  TableClient.cc  TableClient.h  chatclient.cc  chatserver.cc  constants.h  frontend_test.cc  httpServer  httpServer.cc  httpServer.h  loadbalancer.cc  pop3.cc  request.cc  request.h  response.cc  response.h  smtp  smtp.cc  utils.cc
frontendServer/html/: compose.html  drive.html  inbox.html  index.html  login.html  main.html  newemail.html
frontendServer/protos/: bigtable.proto  mail.proto  masterFrontend.proto
frontendServer/scripts/: abc.js  main.js
frontendServer/smtp.dSYM/Contents/Resources/DWARF/: smtp
frontendServer/styles/: main.css
frontendServer/utils/: Protocols.h  constants.h  utils.cc  utils.h
keyvaluestore/: BigTable.cc  CMakeLists.txt  DistributedStorage.cc  FileMetaData.cc  Makefile  MetaTree.cc  StorageServer.cc  TableCell.cc  Utility.cc  backend_server_list.txt  bigtable.grpc.pb.cc  bigtable.grpc.pb.h  bigtable.pb.cc  bigtable.pb.h  bigtable_client.cc  bigtable_client_2.cc  bigtable_server.cc  make.sh  masterBackend.grpc.pb.cc  masterBackend.grpc.pb.h  masterInfo.cc  masterKVServer.cc  master_client.cc  master_client.h  storageserver  table_tester.cc  tester
keyvaluestore/others/: storage.proto
keyvaluestore/protos/: bigtable.pb.cc  bigtable.pb.h  bigtable.proto  masterBackend.proto
kvstore/: BigTable.cc  BigTable.h  FileMetaData.cc  Makefile  StorageServer.cc  TableCell.cc  Utility.cc  storageserver  table_tester.cc  tester
lib/: BigTable.h  DistributedStorage.h  FileMetaData.h  MetaTree.h  MetaTreeNode.h  TableCell.h  Utility.h  handleFile.h  masterInfo.h  serverInfo.h
webmail/: CMakeLists.txt  MailClient.cc  MailClient.h  MailClientTest.cc  MailItem.h  MailServiceGRPC.cc  MailServiceGRPC.h  MailServiceGRPCTest.cc  Makefile  MasterClient.cc  MasterClient.h  SMTPClient.cc  SMTPClient.h  SMTPClientTest.cc  SMTPServer.cc  TableClient.cc  TableClient.h  bigtable.grpc.pb.cc  mail.grpc.pb.cc  mail.grpc.pb.h  mail.pb.cc  mail.pb.h  mail_client.cc  mail_server.cc  masterFrontend.grpc.pb.h  smtp_server.cc
webmail/mail/: MailItem.h  Makefile  mail.grpc.pb.cc  mail.grpc.pb.h  mail.pb.cc  mail.pb.h  mail_client  mail_client.cc  mail_server  mail_server.cc
webmail/mail/protos/: mail.pb.cc  mail.proto
webmail/mailtest/: jill.mbox  linhphan.mbox  sliu.mbox
webmail/protos/: bigtable.pb.cc  bigtable.proto  mail.pb.h  mail.proto
